# Corpindex

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
Cmd/: adddiv.py  buildidx.py  coocmat.py  hquery.py  idxexport.py  idxinfo.py  idxoffsets.py  idxsub.py  im.py  modidx.py  query.py  words2cqpl.py  ztest.py
Corpindex/: Concordance.py  Config.py  Cqpl.py  Cqpl_Cqpl.dbg  Cqpl_Cqpl_parsetab.py  Cquery.py  Debug.py  Dico.py  Index.py  Modify.py  Node.py  Post.py  RequeteIndex.py  StockBsddb.py  StockDbm.py  StockKc.py  Tokcsv.py  Token.py  Tokenize.py  Tokenizer.py  Tokxml.py  Transduction.py  XmlError.py  __init__.py  cli_buildidx.py  cli_hquery.py  cli_idxexport.py  cli_idxinfo.py  cli_modidx.py  cli_query.py  parsetab.py
Corpindex/greffon/: __init__.py  ci_chuquet.py  ci_cqpl.py  ci_dist.py  ci_fige.py  ci_latex.py  ci_pivot.py  ci_txt.py
Rules/: desamb.rul  fr-zfreq.rul
